Fix z-index på joun-modul

--- a/assets/scss/30-module-join.scss
+++ b/assets/scss/30-module-join.scss
@@ -5,12 +5,13 @@
 	margin-bottom: 40px;
 	
 	position: relative;
-	z-index: -1;
+	z-index: 1;
 
 	text-align: center;
 	.item-img-wrap{
 		position: relative;
 		padding: $page-margin;
+		// z-index: 2;
 		&:before{
 		content: '';
 			display: block;
